--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projeto-todo",
   "private": true,
   "version": "0.0.0",
-  "homepage": "http://caiomangabeira.github.io/projeto-todo/",
+  "homepage": "http://caiomangabeira.github.io/projeto-todo",
   "type": "module",
   "scripts": {
     "dev": "vite",
